--- a/.github/workflows/glum_benchmarks.yml
+++ b/.github/workflows/glum_benchmarks.yml
@@ -27,10 +27,10 @@ jobs:
         run: pixi run build
 
       - name: Run test without instrumentation
-        run: pixi run pytest tests/test_glum_non_instrumented.py
+        run: pixi run pytest -s tests/test_glum_non_instrumented.py
 
       - name: Run benchmarks with CodSpeed
         uses: CodSpeedHQ/action@v4
         with:
           mode: simulation
-          run: pixi run pytest --codspeed tests/test_glum_non_instrumented.py
+          run: pixi run pytest --codspeed tests/test_glum_codspeed.py
