What happens if I do this?

--- a/.github/workflows/glum_benchmarks.yml
+++ b/.github/workflows/glum_benchmarks.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   benchmark:
-    runs-on: codspeed-macro
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
